# stl_algorithms_and_ranges

./: CMakeLists.txt  README.md  build  run.sh
src/: boolean_reductions.cpp  compare.cpp  copy_and_move.cpp  divide_and_conquer.cpp  functional.cpp  general_reductions.cpp  generators.cpp  heap_data_structure.cpp  left_folds.cpp  linear_operations.cpp  min_max_algorithms.cpp  partitioning.cpp  ranges_and_views.cpp  search_and_compare.cpp  set_operations.cpp  sorting.cpp  stl_algorithms_and_ranges.cpp  swaps.cpp  transformation.cpp
